Added build script

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Scripts
-*.bash
-
-# Fun class for messing around
-Test.java
+# Client scripts to help out
+friend.bash
